@YELP_HELP_RULES@

HELP_ID = easytag

HELP_FILES = \
	file-rename.page \
	file-select.page \
	format-specifier.page \
	image-delete.page \
	image-export.page \
	image.page \
	index.page \
	introduction.page \
	keyboard-shortcuts.page \
	legal.xml \
	scanner.page \
	starting.page \
	tag-field.page \
	tag.page

HELP_MEDIA = \
	media/icon.png
