@YELP_HELP_RULES@

HELP_ID = easytag

HELP_FILES = \
	cddb-search.page \
	file-rename.page \
	file-select.page \
	format-specifier.page \
	image-delete.page \
	image-export.page \
	image.page \
	index.page \
	introduction.page \
	keyboard-shortcuts.page \
	legal.xml \
	playlist-generate.page \
	problems-id3.page \
	problems-ogg-split.page \
	scanner.page \
	starting.page \
	tag-capitalization.page \
	tag-field.page \
	tag.page

HELP_MEDIA = \
	media/icon.png

HELP_LINGUAS = ca cs de el es fr hu pl sv uk
